# kshare

./: CMakeLists.txt  README.md  build.sh  install.sh
client/: CMakeLists.txt  client.cpp  client.hpp  client_state.cpp  client_state.hpp  config.cpp  config.hpp  main.cpp
common/: CMakeLists.txt  logger.cpp  logger.hpp  singleton.hpp
common/crypto/: context.cpp  context.hpp  iv.hpp  key.cpp  key.hpp  random.cpp  random.hpp
common/input/: event_manager.cpp  event_manager.hpp  event_reader.cpp  event_reader.hpp  event_writer.cpp  event_writer.hpp
common/net/: event.cpp  event.hpp  host.hpp  packet.cpp  packet.hpp  peer.hpp  peer_iterator.hpp
common/proto/: msg.cpp  msg.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
common/x11/: context.cpp  context.hpp
example/: client.toml  server.toml
server/: CMakeLists.txt  client_state.cpp  client_state.hpp  config.cpp  config.hpp  main.cpp  server.cpp  server.hpp
